--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,10 +13,11 @@ jobs:
       fail-fast: false
       matrix:
         python-version:
-          - 3.6
-          - 3.7
-          - 3.8
-          - 3.9
+          - '3.6'
+          - '3.7'
+          - '3.8'
+          - '3.9'
+          - '3.10.0-beta.4'
         tox-environment:
           - django22
           - django31
@@ -25,6 +26,8 @@ jobs:
           - python-version: 3.8
             tox-environment: djangomain
           - python-version: 3.9
+            tox-environment: djangomain
+          - python-version: 3.10
             tox-environment: djangomain
 
     env:
